# djangosearch

./: .dockerignore  Dockerfile  README.md  fly.toml  manage.py  pyproject.toml
djangosearch/: asgi.py  config.py  settings.py  urls.py  views.py  wsgi.py
djangosearch/starwars/: apps.py  models.py  urls.py  views.py
djangosearch/starwars/management/commands/: fill_db.py
djangosearch/starwars/migrations/: 0001_initial.py
djangosearch/starwars/templates/starwars/: list_characters.html  show_character.html
templates/: base.html
